<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/filters"
        app:queryHint="@string/action_search" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filters"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/search"
        >

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:buttonTint="@color/purple_500"
        android:layout_marginEnd="4dp"
        android:text="@string/filter_all"/>

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/purple_500"
        android:layout_marginEnd="4dp"
        android:text="@string/filter_graz"/>

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:buttonTint="@color/purple_500"
        android:text="@string/filter_now"/>

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/purple_500"
        android:layout_marginEnd="4dp"
        android:text="@string/filter_today"
      />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_500"
            android:text="@string/filter_tomorrow"
            />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_event_list"
        android:name="com.ui.EventFragment"
        android:layout_width="match_parent"
        android:paddingBottom="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filters"
        tools:context="com.ui.event.EventFragment"
        tools:listitem="@layout/fragment_event" />

</androidx.constraintlayout.widget.ConstraintLayout>
